--- a/templates/last_page.html
+++ b/templates/last_page.html
@@ -38,7 +38,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for item in data.items %}
+                {% for item in data['items'] %}
                     {% if item.is_divider %}
                         <tr>
                             <td colspan="7" class="divider">{{ item.description }}</td>
